--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,8 @@
   "$schema": "https://turbo.build/schema.json",
   "ui": "stream",
   "globalEnv": [
-    "EDGEDB_DSN"
+    "EDGEDB_DSN",
+    "JWT_SECRET"
   ],
   "tasks": {
     "build": {
